# Drop-Amoeba

./: CMakeList.txt  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CMake.yml  qtBuildRedditEdition.yml  qt_install.yml
AmoebaTest/: amoebamodel.cpp  amoebamodel.h  amoebapersist.cpp  amoebapersist.h  amoebatest.pro  tst_test.cpp
DAmoeba/: CMakeLists.txt  amoebaview.h
Drop-Amoeba/: amoebamodel.cpp  amoebapersist.cpp
DropAmoeba/: CMakeLists.txt  DropAmoeba.pro  amoebamodel.h  amoebapersist.h  amoebaview.cpp  main.cpp
build-DropAmoeba-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-DropAmoeba-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QFile.76D6E950471FDCCA.idx  QGridLayout.7E664F78B9C690DA.idx  QInputDialog.319282CD8D80FD02.idx  QObject.7EA1137D5F7ABCC4.idx  QTextStream.62E357A60604BF06.idx  QVector.71DEB241847A7BF8.idx  QtDebug.BAC8227B09A9DC8D.idx  amoebamodel.cpp.681A3488A286CEF6.idx  amoebamodel.h.349796118380292A.idx  amoebapersist.cpp.3251F3B9F6977AA0.idx  amoebapersist.h.9E09090D5522E873.idx  amoebaview.cpp.E825D8E9F1AB511B.idx  amoebaview.h.A41E308399CFFFC9.idx  main.cpp.46953912CE4D4AAC.idx  qaction.h.D4ED17FCA265D233.idx  qcontainerfwd.h.A1AB13BE3C1C3128.idx  qcoreevent.h.1BDCDCC34A620D1E.idx  qcursor.h.F37A910B8795E351.idx  qdebug.h.5A584BDA748F94E9.idx  qdialog.h.048AD292AF2E2916.idx  qfiledialog.h.4B32442D814B1CFA.idx  qflags.h.1482E244787FEFEB.idx  qframe.h.85631FCC02D86AC4.idx  qglobal.h.A7EDC9CF6953AF33.idx  qhash.h.7AC01F359F6B298F.idx  qinputdialog.h.FD9420A320E9E7F5.idx  qinputmethod.h.8AE6D12A4AC22322.idx  qlineedit.h.CE321024DA6E75E5.idx  qlist.h.0F076588F1CBADA7.idx  qmetatype.h.EEF954C908C02C2D.idx  qnativeinterface.h.471E5F4B2A528A60.idx  qobject.h.1B4D1012053F03E1.idx  qobjectdefs_impl.h.7C569883D8B7D120.idx  qpushbutton.h.5B8EDBD9A976834B.idx  qshareddata.h.CC1C07167E476AEE.idx  qsharedpointer_impl.h.ACA297B6F56222AB.idx  qstringfwd.h.318DE063F809960D.idx  qtextdocument.h.F3A2AE489E77C7D9.idx  qtmetamacros.h.C98C181C60C840AA.idx  qtypeinfo.h.B11162CF1D97DC8D.idx  (+6 more)
